syntax = "proto3";

message DecompileCommand
{
  // The text representation of an LLVM IR module.
  bytes llvmModuleText = 1;
};

message DecompileReply
{
  // The decompiled C representation of the LLVM IR module.
  string decompiledText = 1;
}

service RellicDecompilation
{
  rpc Decompile(DecompileCommand) returns (DecompileReply) {};
}